20240602-040613：lua将emoji置后的功能激活中但效果不好。custom中的配置暂时注释掉。

--- a/rime/zzdyx_mod.custom.yaml
+++ b/rime/zzdyx_mod.custom.yaml
@@ -33,6 +33,7 @@
   engine/filters:                #滤镜，每一项在下面单独设定功能
     - simplifier
     - "simplifier@emoji_cn"
+    #- "lua_filter@emoji_reduce_filter"
     - uniquifier    #去重，需要放在列表最后面，且对emoji无效
 
 #opencc功能：emoji表情
@@ -42,6 +43,10 @@
     tags: abc
     tag: emoji
     tips: all
+
+  #emoji_reduce:                       # Emoji 降频到第 idx 个位置
+    #idx: 4
+
 
 #opencc功能：简繁转换
   simplifier:
