--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -2490,20 +2490,17 @@ CPU	cpu
 表侄	bgij
 表征	bgik
 百舸争流	bgil
-不管怎么	bgim
 帮着	bgim
 表字	bgin
 帮助	bgio
 不攻自破	bgip
 败鼓之皮	bgip
 班主任	bgir
-不管怎么说	bgis
 表姊	bgis
 闭关自守	bgis
 班长	bgit
 班子	bgiv
 班组	bgix
-不管怎样	bgiy
 表针	bgiy
 班机	bgjc
 帮教	bgjf
@@ -2670,20 +2667,17 @@ CPU	cpu
 表侄	bgzj
 表征	bgzk
 百舸争流	bgzl
-不管怎么	bgzm
 帮着	bgzm
 表字	bgzn
 帮助	bgzo
 不攻自破	bgzp
 败鼓之皮	bgzp
 班主任	bgzr
-不管怎么说	bgzs
 表姊	bgzs
 闭关自守	bgzs
 班长	bgzt
 班子	bgzv
 班组	bgzx
-不管怎样	bgzy
 八杆子打不着	bgzz
 班组长	bgzz
 部	bh
@@ -6878,9 +6872,9 @@ bilibili	blbl
 北街	byjk
 不宜久留	byjl
 北极圈	byjq
+背景	byjr
 北京人	byjr
 拨云见日	byjr
-背景	byjr
 北极圈	byju
 北极星	byjx
 北极熊	byjx
@@ -8188,8 +8182,8 @@ bilibili	blbl
 测速	cdsf
 冲动是魔鬼	cdsg
 传道授业解惑	cdsh
-沧桑	cdsl
 测试	cdsl
+沧桑	cdsl
 沉思	cdso
 测算	cdst
 沉声	cdsu
@@ -16052,7 +16046,6 @@ bilibili	blbl
 吊兰	dilm
 吊篮	dilt
 呆了	dilv
-读者来信	dilx
 蹲	dim
 呆萌	dime
 蹲	dimf
@@ -20355,7 +20348,6 @@ bilibili	blbl
 党政领导	dzld
 戴罪立功	dzlg
 刀螂	dzlo
-读者来信	dzlx
 打肿脸充胖子	dzlz
 刀模	dzmc
 地质年代	dznd
@@ -20467,8 +20459,6 @@ bilibili	blbl
 而知	eait
 而走	eaiu
 而终	eaix
-而尽	eajb
-而居	eajb
 而进	eajg
 而就	eajh
 而今	eajj
@@ -21665,11 +21655,10 @@ bilibili	blbl
 副总	fdim
 法则	fdio
 泛舟	fdiq
-副主任	fdir
 法制	fdit
 副总统	fdit
-法子	fdiv
 浮肿	fdiv
+法子	fdiv
 副政委	fdiw
 副作用	fdiy
 副主席	fdix
@@ -21700,8 +21689,8 @@ bilibili	blbl
 非对抗性	fdkx
 副科长	fdkz
 蜚短流长	fdlc
-法拉第	fdld
 泛滥	fdld
+法拉第	fdld
 泛蓝	fdle
 法老	fdlf
 法理	fdlg
@@ -21874,7 +21863,6 @@ bilibili	blbl
 副总	fdzm
 法则	fdzo
 泛舟	fdzq
-副主任	fdzr
 法制	fdzt
 副总统	fdzt
 法子	fdzv
@@ -22276,12 +22264,11 @@ bilibili	blbl
 放飞	fhfn
 冯妇	fhfs
 放风	fhfw
-放风筝	fhfz
 放飞	fhfz
+放风筝	fhfz
 方格	fhgc
-放歌	fhgf
 放过	fhgf
-方歌	fhgf
+放歌	fhgf
 放光	fhgj
 府谷	fhgm
 放虎归山	fhgs
@@ -22299,9 +22286,8 @@ bilibili	blbl
 放好	fhhs
 腐坏	fhhu
 放缓	fhhx
-放在	fhia
-放逐	fhia
 方丈	fhia
+放逐	fhia
 废渣	fhid
 方正	fhif
 腐殖质	fhii
@@ -22356,9 +22342,8 @@ bilibili	blbl
 丰厚利润	fhlr
 放量	fhlr
 烽火连天	fhlt
-废了	fhlv
-放了	fhlv
 疯了	fhlv
+废了	fhlv
 飞火流星	fhlx
 峰回路转	fhlz
 方面	fhma
@@ -22386,14 +22371,14 @@ bilibili	blbl
 放炮	fhpm
 放盘	fhpq
 放权	fhqc
-废弃	fhqh
 放弃	fhqh
+废弃	fhqh
 疯抢	fhqk
 放晴	fhqr
 废气	fhqt
 废弃物	fhqw
-废人	fhrj
 放任	fhrj
+废人	fhrj
 放热	fhrk
 风和日丽	fhrl
 腐乳	fhrm
@@ -22434,8 +22419,8 @@ bilibili	blbl
 废铁	fhty
 返回途中	fhtz
 放权	fhuc
-废弃	fhuh
 放弃	fhuh
+废弃	fhuh
 疯抢	fhuk
 放晴	fhur
 废气	fhut
@@ -22467,8 +22452,8 @@ bilibili	blbl
 放心	fhxl
 放学	fhxn
 方向盘	fhxp
-放血	fhxr
 方向	fhxr
+放血	fhxr
 方向上	fhxs
 废墟	fhxu
 方向性	fhxx
@@ -22477,7 +22462,6 @@ bilibili	blbl
 霏	fhy
 方有	fhya
 府尹	fhyb
-废油	fhyd
 废液	fhyd
 痱	fhyd
 方药	fhye
@@ -22715,7 +22699,6 @@ bilibili	blbl
 佛事	fjsf
 封建社会	fjsh
 佛手	fjsk
-俯拾	fjsk
 俯视	fjsl
 俯首	fjsm
 仿宋	fjsn
@@ -23006,8 +22989,8 @@ bilibili	blbl
 法兰克福	flkf
 富兰克林	flkl
 房客	flkn
-福克纳	flkn
 访客	flkn
+福克纳	flkn
 弗兰肯斯坦	flkt
 房款	flku
 房龙	flla
@@ -23166,8 +23149,8 @@ bilibili	blbl
 翻边	fmbn
 分贝	fmbo
 分不清	fmbq
-粉白	fmbr
 翻版	fmbr
+粉白	fmbr
 分布图	fmbt
 粉笔	fmbt
 分不清	fmbu
@@ -23287,9 +23270,9 @@ bilibili	blbl
 烦杂	fmiw
 粉状物	fmiw
 分组	fmix
-分之一	fmiy
-分针	fmiy
 分钟	fmiy
+分针	fmiy
+分之一	fmiy
 分局	fmjb
 分居	fmjb
 番剧	fmjb
@@ -23327,8 +23310,8 @@ bilibili	blbl
 分理	fmlg
 分离	fmlh
 分路	fmli
-凤毛麟角	fmlj
 翻领	fmlj
+凤毛麟角	fmlj
 分流孔	fmlk
 忿	fmlk
 翻	fmll
@@ -23372,15 +23355,13 @@ bilibili	blbl
 分派	fmpd
 分配	fmpf
 负面评价	fmpj
-分批	fmpk
 翻拍	fmpk
+分批	fmpk
 分配律	fmpl
 粉皮	fmpn
-分配器	fmpq
 分配权	fmpq
 翻盘	fmpq
 分片	fmpr
-分配器	fmpu
 分配权	fmpu
 分频	fmpy
 粉皮	fmpz
@@ -23425,11 +23406,11 @@ bilibili	blbl
 翻身	fmsr
 分式	fmss
 分生	fmst
-粉色	fmsw
 粉饰	fmsw
-分数线	fmsx
+粉色	fmsw
 粉丝	fmsx
 粉碎性	fmsx
+分数线	fmsx
 锋芒所向	fmsx
 翻身仗	fmsz
 粪桶	fmtc
@@ -23437,8 +23418,8 @@ bilibili	blbl
 分庭	fmth
 分体	fmtj
 分摊	fmtk
-分头	fmtn
 斧头	fmtn
+分头	fmtn
 烦透	fmtt
 粪土	fmtu
 翻腾	fmtv
@@ -23494,7 +23475,6 @@ bilibili	blbl
 烦忧	fmyn
 分野	fmyo
 风靡一时	fmys
-父业	fmyu
 翻越	fmyu
 分院	fmyv
 翻印	fmyw
@@ -23541,6 +23521,7 @@ bilibili	blbl
 发表	fnbg
 发布会	fnbh
 发病	fnbh
+发辫	fnbh
 怫	fnbi
 飞边子	fnbi
 发报机	fnbj
@@ -23563,6 +23544,7 @@ bilibili	blbl
 飞船	fncq
 发臭	fncr
 发车	fncs
+飞车	fncs
 发愁	fnct
 发出	fncv
 飞驰	fncx
@@ -23570,13 +23552,11 @@ bilibili	blbl
 富	fnd
 发达	fnda
 飞碟	fnda
-妇女代表	fndb
 飞弹	fndb
 发电厂	fndc
 飞渡	fndd
 发动	fndg
 发端	fndh
-妇女大会	fndh
 发呆	fndi
 发嗲	fndi
 发电站	fndi
@@ -23594,11 +23574,10 @@ bilibili	blbl
 发电站	fndz
 富二代	fned
 飞蛾	fneo
-妇女儿童	fnet
 愤	fnf
 发奋	fnfa
-发放	fnfh
 发疯	fnfh
+发放	fnfh
 发福	fnfl
 发烦	fnfm
 发愤	fnfn
@@ -23633,7 +23612,6 @@ bilibili	blbl
 发火	fnhm
 愤恨	fnhn
 发黑	fnho
-飞回	fnho
 飞蝗	fnho
 发货票	fnhp
 飞航	fnhq
@@ -23644,7 +23622,6 @@ bilibili	blbl
 发红	fnhx
 发展	fnib
 飞涨	fnid
-妇女组织	fnii
 富足	fnii
 发作	fnij
 发作期	fnij
@@ -23653,16 +23630,9 @@ bilibili	blbl
 发着	fnim
 发怔	fnin
 飞贼	fnio
-发作期	fniq
 发质	fniq
-父女之情	fniq
 发自	fnir
-妇女主任	fnir
 分内之事	fnis
-发至	fnis
-发作期	fniu
-父女之情	fniu
-飞走	fniu
 发胀	fniv
 发作性	fnix
 发紫	fniy
@@ -23672,16 +23642,14 @@ bilibili	blbl
 发酵	fnjf
 发髻	fnjf
 飞进	fnjg
-发夹	fnjh
-发奖	fnjh
 发迹	fnjh
+发夹	fnjh
 发件	fnjj
 发掘	fnjk
-妇女健康	fnjk
 飞机库	fnjk
 发卷	fnjm
-发家	fnjn
 发觉	fnjn
+发家	fnjn
 富甲	fnjo
 飞机票	fnjp
 发件人	fnjr
@@ -23706,8 +23674,6 @@ bilibili	blbl
 飞流	fnld
 发落	fnle
 发廊	fnlh
-发来	fnlh
-飞来	fnlh
 飞离	fnlh
 发令	fnlj
 飞掠	fnlk
@@ -23726,15 +23692,14 @@ bilibili	blbl
 发面	fnma
 富民	fnmb
 发木	fnmc
-愤懑	fnmd
 飞沫	fnmd
+愤懑	fnmd
 发蒙	fnme
 发霉	fnmh
 发麻	fnmh
 发明者	fnmi
-发明奖	fnmj
 发明家	fnmj
-发闷	fnmj
+发明奖	fnmj
 发懵	fnmn
 发明	fnmr
 发明人	fnmr
@@ -23749,6 +23714,7 @@ bilibili	blbl
 富婆	fnpd
 飞瀑	fnpd
 发票	fnpf
+发配	fnpf
 富平	fnph
 飞跑	fnpi
 发泡剂	fnpj
@@ -23768,8 +23734,6 @@ bilibili	blbl
 发起人	fnqr
 发妻	fnqs
 发起	fnqu
-飞去	fnqu
-飞起	fnqu
 发卡	fnqy
 发钱	fnqy
 富人	fnrj
@@ -23808,7 +23772,6 @@ bilibili	blbl
 发帖量	fntl
 发图	fnto
 飞艇	fntq
-妇女团体	fntt
 飞腾	fntv
 发条	fntw
 发帖子	fntz
@@ -23819,11 +23782,10 @@ bilibili	blbl
 发圈	fnuo
 发起人	fnur
 发妻	fnus
-发情期	fnuu
 发起	fnuu
-飞去	fnuu
-飞起	fnuu
+发情期	fnuu
 发卡	fnuy
+发钱	fnuy
 发威	fnwa
 发文	fnwh
 飞吻	fnwi
@@ -23880,6 +23842,7 @@ bilibili	blbl
 飞跃	fnyi
 发邮件	fnyj
 发扬	fnyk
+飞扬	fnyk
 发芽率	fnyl
 富裕	fnyl
 发炎	fnym
@@ -23905,13 +23868,9 @@ bilibili	blbl
 飞贼	fnzo
 发作期	fnzq
 发质	fnzq
-父女之情	fnzq
 发自	fnzr
-妇女主任	fnzr
 分内之事	fnzs
-发至	fnzs
 发作期	fnzu
-父女之情	fnzu
 飞走	fnzu
 发胀	fnzv
 发作性	fnzx
@@ -24029,33 +23988,20 @@ bilibili	blbl
 贩子	fozv
 分片包干	fpbg
 扶贫帮困	fpbk
-分配比例	fpbl
 奉陪到底	fpdd
-分配方式	fpfs
 反璞归真	fpgi
 返朴归真	fpgi
 返璞归真	fpgi
-分配公平	fpgp
 反璞归真	fpgz
 返朴归真	fpgz
 返璞归真	fpgz
 返朴还淳	fphc
 扶贫济困	fpjk
 风平浪静	fplj
-分配利润	fplr
 抚平伤口	fpsk
-分配土地	fptd
-分配体制	fpti
-分配体制	fptz
-分配完毕	fpwb
 访贫问苦	fpwk
-分配原则	fpyi
-分配原则	fpyz
 反	fq
 舫	fq
-反安装	fqai
-反安装	fqaz
-反病毒	fqbd
 返本	fqbf
 饭前便后	fqbh
 反哺	fqbi
@@ -24063,7 +24009,6 @@ bilibili	blbl
 反被	fqbl
 反比	fqbs
 反包围	fqbw
-反绑	fqbx
 反驳	fqbx
 反编译	fqby
 返厂	fqca
@@ -24071,10 +24016,7 @@ bilibili	blbl
 返潮	fqcd
 反冲	fqch
 负气出走	fqci
-反侧	fqcj
-反冲击	fqcj
 反常	fqcj
-反潮流	fqcl
 反衬	fqcl
 反差	fqcm
 反穿	fqcn
@@ -24090,7 +24032,6 @@ bilibili	blbl
 反倒	fqdj
 返抵	fqdk
 反对	fqdl
-反登陆	fqdl
 反调	fqdl
 反动派	fqdp
 反对派	fqdp
@@ -24100,7 +24041,6 @@ bilibili	blbl
 返点	fqdy
 反其道而行之	fqdz
 反而	fqea
-反腐败	fqfb
 反覆	fqff
 非亲非故	fqfg
 反方	fqfh
@@ -24110,7 +24050,6 @@ bilibili	blbl
 反讽	fqfl
 夫妻反目	fqfm
 分期分批	fqfp
-反复说	fqfs
 反复	fqft
 反方向	fqfx
 反感	fqga
@@ -24119,7 +24058,6 @@ bilibili	blbl
 反光	fqgj
 反光镜	fqgj
 反观	fqgl
-反过来	fqgl
 反革命	fqgm
 返岗	fqgo
 返归	fqgp
@@ -24127,22 +24065,18 @@ bilibili	blbl
 反戈	fqgs
 舫	fqh
 返还	fqha
-反汇编	fqhb
 舫	fqhe
 反华	fqhj
 反话	fqhl
 反悔	fqhn
 返回	fqho
 返航	fqhq
-反函数	fqhs
 反治	fqid
 反正	fqif
 反证法	fqif
 奋起直追	fqii
-反之	fqil
 反证	fqil
 反贼	fqio
-反转片	fqip
 反照	fqir
 反转	fqis
 飞禽走兽	fqis
@@ -24150,11 +24084,10 @@ bilibili	blbl
 风气之先	fqix
 反间谍	fqjd
 反击	fqjg
-发起进攻	fqjg
 返京	fqjh
 反击战	fqji
-反季节	fqjj
 反间	fqjj
+反季节	fqjj
 反间计	fqjj
 反诘	fqjl
 反剪	fqjm
@@ -24163,7 +24096,6 @@ bilibili	blbl
 反舰	fqjq
 反角	fqjw
 反击战	fqjz
-反恐怖	fqkb
 反恐	fqkf
 反抗者	fqki
 反抗	fqkk
@@ -24178,7 +24110,6 @@ bilibili	blbl
 反了	fqlv
 反面	fqma
 富强民主	fqmi
-反木马	fqmm
 反美	fqmm
 反目	fqmo
 扶清灭洋	fqmy
@@ -24187,20 +24118,15 @@ bilibili	blbl
 返	fqnn
 反派	fqpd
 返聘	fqpf
-反叛者	fqpi
 反扑	fqpk
 反叛	fqpm
-反叛者	fqpz
-反其道	fqqd
 反潜	fqqd
 返青	fqqg
 返券	fqqm
 反切	fqqs
-反窃听	fqqt
 反倾销	fqqx
 反人类	fqrl
 反日	fqrr
-反射出	fqsc
 反水	fqsd
 分清是非	fqsf
 反酸	fqsf
@@ -24217,7 +24143,6 @@ bilibili	blbl
 反色	fqsw
 反锁	fqsy
 反弹	fqtb
-反台独	fqtd
 反跳	fqti
 反贪	fqtj
 反贪局	fqtj
@@ -24225,13 +24150,10 @@ bilibili	blbl
 反推	fqtk
 反题	fqtr
 反跳痛	fqtt
-反贪污	fqtw
-反其道	fqud
 反潜	fqud
 返青	fqug
 返券	fqum
 反切	fqus
-反窃听	fqut
 反倾销	fqux
 房前屋后	fqwh
 反物质	fqwi
@@ -24241,7 +24163,6 @@ bilibili	blbl
 反为	fqwm
 反胃	fqwo
 废寝忘食	fqws
-反卫星	fqwx
 反物质	fqwz
 风情万种	fqwz
 返校	fqxc
@@ -24261,11 +24182,9 @@ bilibili	blbl
 反应	fqyh
 反咬	fqyi
 封妻荫子	fqyi
-反应快	fqyk
 反语	fqyl
 反义	fqym
 反应器	fqyq
-反应热	fqyr
 反映	fqyr
 反应器	fqyu
 风起云涌	fqyy
@@ -24276,7 +24195,6 @@ bilibili	blbl
 反之	fqzl
 反证	fqzl
 反贼	fqzo
-反转片	fqzp
 反照	fqzr
 反转	fqzs
 飞禽走兽	fqzs
@@ -24525,10 +24443,10 @@ bilibili	blbl
 牥	fthe
 繁花	fthe
 符号	fthi
-复合	fthj
-复活节	fthj
 符合	fthj
 繁华	fthj
+复合	fthj
+复活节	fthj
 复回	ftho
 复婚	fths
 复合体	ftht
@@ -24575,11 +24493,9 @@ bilibili	blbl
 氛	ftm
 繁茂	ftme
 复命	ftmj
-繁密	ftmn
 繁忙	ftmn
-风土民情	ftmq
+繁密	ftmn
 复明	ftmr
-风土民情	ftmu
 稃	ftmv
 氛	ftmz
 繁难	ftnl
@@ -24589,7 +24505,6 @@ bilibili	blbl
 氟哌酸	ftps
 复权	ftqc
 复	ftr
-法庭认定	ftrd
 繁荣	ftre
 复任	ftrj
 繁冗	ftrl
@@ -24615,7 +24530,6 @@ bilibili	blbl
 繁体版	fttb
 复沓	fttd
 繁体字	ftti
-法庭调解	fttj
 繁体	fttj
 馥	fttr
 馥	fttw
@@ -24726,7 +24640,6 @@ bilibili	blbl
 封建	fujb
 封禁	fujc
 封基	fujf
-发起进攻	fujg
 赴京	fujh
 封建制	fuji
 坊间	fujj
@@ -24894,9 +24807,9 @@ bilibili	blbl
 防护罩	fvhz
 附在	fvia
 服装厂	fvic
-服装店	fvid
 防治	fvid
 附注	fvid
+服装店	fvid
 服装	fvih
 肥仔	fvij
 肥皂剧	fvij
@@ -24942,7 +24855,6 @@ bilibili	blbl
 防涝	fvld
 服老	fvlf
 肺痨	fvlh
-防凌	fvlh
 肥料	fvlm
 肥力	fvln
 腹轮	fvls
@@ -25009,8 +24921,8 @@ bilibili	blbl
 肥臀	fvtb
 腹痛	fvth
 附体	fvtj
-服贴	fvto
 附图	fvto
+服贴	fvto
 腹	fvtr
 腹透	fvtt
 腹	fvtw
@@ -25081,9 +24993,9 @@ bilibili	blbl
 防疫站	fvyz
 附在	fvza
 服装厂	fvzc
-服装店	fvzd
 防治	fvzd
 附注	fvzd
+服装店	fvzd
 服装	fvzh
 肥仔	fvzj
 肥皂剧	fvzj
@@ -25130,7 +25042,6 @@ bilibili	blbl
 凤城	fwcu
 孵出	fwcv
 犯错误	fwcw
-凡此	fwcy
 犯错	fwcy
 匐	fwd
 风大	fwda
@@ -25183,9 +25094,9 @@ bilibili	blbl
 负荷	fwhe
 法网恢恢	fwhh
 负号	fwhi
-孵化	fwhj
-风化	fwhj
 饭盒	fwhj
+风化	fwhj
+孵化	fwhj
 风火	fwhm
 风寒	fwhn
 孵化器	fwhq
@@ -25291,7 +25202,6 @@ bilibili	blbl
 饭前	fwqm
 风情	fwqn
 风气	fwqt
-负起	fwqu
 风趣	fwqu
 凤栖梧	fwqw
 饭钱	fwqy
@@ -25305,16 +25215,16 @@ bilibili	blbl
 风热证	fwrz
 风沙暴	fwsb
 风湿病	fwsb
+风湿	fwsd
 风水	fwsd
 风沙	fwsd
-风湿	fwsd
 法外施恩	fwse
 凡事	fwsf
 风俗画	fwsh
 风霜	fwsh
 福无双至	fwsi
-负伤	fwsj
 风俗	fwsj
+负伤	fwsj
 风势	fwsk
 风湿科	fwsk
 风扇	fwsl
@@ -25347,7 +25257,6 @@ bilibili	blbl
 饭前	fwum
 风情	fwun
 风气	fwut
-负起	fwuu
 风趣	fwuu
 凤栖梧	fwuw
 饭钱	fwuy
@@ -25364,9 +25273,8 @@ bilibili	blbl
 风向标	fwxb
 风味小吃	fwxc
 风险高	fwxg
-凡需	fwxh
-凤仙花	fwxh
 风雪	fwxh
+凤仙花	fwxh
 凡响	fwxi
 风信子	fwxi
 风行	fwxk
@@ -25387,9 +25295,9 @@ bilibili	blbl
 鲱	fwyd
 风雨	fwyf
 风云	fwyg
-分外眼红	fwyh
 风衣	fwyh
 风韵	fwyh
+分外眼红	fwyh
 风雨中	fwyi
 风油精	fwyj
 负义	fwym
@@ -25830,7 +25738,6 @@ bilibili	blbl
 发火	fzhm
 发慌	fzhn
 发黑	fzho
-飞回	fzho
 飞蝗	fzho
 发货票	fzhp
 飞航	fzhq
@@ -25848,9 +25755,7 @@ bilibili	blbl
 发着	fzim
 发怔	fzin
 飞贼	fzio
-发作期	fziq
 发质	fziq
-飞舟	fziq
 发自	fzir
 飞转	fzis
 发作期	fziu
@@ -25892,7 +25797,6 @@ bilibili	blbl
 发落	fzle
 防止浪费	fzlf
 发廊	fzlh
-发来	fzlh
 飞离	fzlh
 发令	fzlj
 飞掠	fzlk
@@ -25953,11 +25857,8 @@ bilibili	blbl
 发情期	fzqq
 发起人	fzqr
 发妻	fzqs
-发去	fzqu
-发情期	fzqu
 发起	fzqu
-飞去	fzqu
-飞起	fzqu
+发情期	fzqu
 扶正祛邪	fzqx
 发卡	fzqy
 飞人	fzrj
@@ -26010,8 +25911,6 @@ bilibili	blbl
 发妻	fzus
 发情期	fzuu
 发起	fzuu
-飞去	fzuu
-飞起	fzuu
 扶正祛邪	fzux
 发卡	fzuy
 发威	fzwa
@@ -26023,7 +25922,6 @@ bilibili	blbl
 飞舞	fzwt
 发行版	fzxb
 发行部	fzxb
-付诸行动	fzxd
 发泄	fzxd
 发祥地	fzxd
 飞泻	fzxd
@@ -26511,11 +26409,11 @@ bilibili	blbl
 柜中	gcio
 光彩照人	gcir
 格致	gcis
-构筑	gcit
 构造	gcit
-柜子	gciv
-格子	gciv
+构筑	gcit
 棍子	gciv
+格子	gciv
+柜子	gciv
 构筑物	gciw
 贯彻执行	gcix
 桧	gcj
@@ -26591,8 +26489,8 @@ bilibili	blbl
 柜	gcs
 梗死	gcsa
 顾此失彼	gcsb
-格栅	gcsc
 概述	gcsc
+格栅	gcsc
 高城深池	gcsc
 格式化	gcsh
 贯彻始终	gcsi
@@ -26602,9 +26500,8 @@ bilibili	blbl
 过从甚密	gcsm
 梗塞	gcsn
 构思	gcso
-公车上书	gcss
-根式	gcss
 格式	gcss
+公车上书	gcss
 该出手时就出手	gcss
 贯彻实施	gcss
 功成身退	gcst
@@ -26654,11 +26551,11 @@ bilibili	blbl
 柜中	gczo
 光彩照人	gczr
 格致	gczs
-构筑	gczt
 构造	gczt
-柜子	gczv
-格子	gczv
+构筑	gczt
 棍子	gczv
+格子	gczv
+柜子	gczv
 构筑物	gczw
 贯彻执行	gczx
 滚	gd
@@ -26706,7 +26603,6 @@ bilibili	blbl
 港	gdfb
 㽏	gdfd
 泔	gdfd
-滚沸	gdfd
 高度发达	gdfd
 港府	gdfh
 沽	gdfi
@@ -34295,8 +34191,8 @@ GPRS	gprs
 会谈	hjtl
 何谈	hjtl
 含糖	hjtm
-伙同	hjto
 合同	hjto
+伙同	hjto
 合同期	hjtq
 合同书	hjts
 合同期	hjtu
@@ -39052,9 +38948,9 @@ GPRS	gprs
 职	ifim
 载着	ifim
 正宗	ifin
-栽赃	ifio
 正则	ifio
 遭罪	ifio
+栽赃	ifio
 陟罚臧否	ifip
 载舟	ifiq
 直追	ifir
@@ -43322,7 +43218,6 @@ GPRS	gprs
 自	irdd
 自动挡	irdd
 自渎	irdd
-早都	irdf
 自带	irdf
 自动	irdg
 追悼会	irdh
@@ -43482,7 +43377,6 @@ GPRS	gprs
 照看	irkk
 早课	irkl
 最快	irkn
-主任科员	irky
 自励	irla
 最灵	irlb
 自流	irld
@@ -45656,7 +45550,6 @@ GPRS	gprs
 组字	ixin
 纸制品	ixip
 纸质	ixiq
-执行主任	ixir
 纵轴	ixis
 组长	ixit
 骤增	ixiu
@@ -45870,7 +45763,6 @@ GPRS	gprs
 组字	ixzn
 纸制品	ixzp
 纸质	ixzq
-执行主任	ixzr
 纵轴	ixzs
 终至	ixzs
 组长	ixzt
@@ -51181,8 +51073,8 @@ GPRS	gprs
 家门	jnmj
 锦囊妙计	jnmj
 家门口	jnmk
-俊男美女	jnmn
 寂寞	jnmn
+俊男美女	jnmn
 加冕	jnmo
 加盟	jnmr
 窭	jnms
@@ -57468,7 +57360,6 @@ GPRS	gprs
 开山之作	ksii
 哭丧着脸	ksil
 匡助	ksio
-科室主任	ksir
 口舌之嫌	ksix
 口舌之争	ksiz
 匡救	ksjf
@@ -57500,7 +57391,6 @@ GPRS	gprs
 口舌之争	kszi
 哭丧着脸	kszl
 匡助	kszo
-科室主任	kszr
 口舌之嫌	kszx
 口舌之争	kszz
 开山之作	kszz
@@ -57551,7 +57441,6 @@ GPRS	gprs
 开脱罪责	ktii
 靠着	ktim
 空头支票	ktip
-科主任	ktir
 科长	ktit
 筷子	ktiv
 科技部	ktjb
@@ -57645,7 +57534,6 @@ GPRS	gprs
 靠枕	ktzc
 靠着	ktzm
 空头支票	ktzp
-科主任	ktzr
 科长	ktzt
 筷子	ktzv
 开脱罪责	ktzz
@@ -64097,8 +63985,8 @@ GPRS	gprs
 码	ma
 厖	maak
 面壁	mabb
-面包车	mabc
 面板	mabc
+面包车	mabc
 面包房	mabf
 码表	mabg
 面部	mabh
@@ -69550,8 +69438,8 @@ GPRS	gprs
 南湖公园	nhgy
 霓虹灯	nhhd
 霓虹	nhho
-内河航运	nhhy
 凝灰岩	nhhy
+内河航运	nhhy
 凝滞	nhid
 南海诸岛	nhid
 怒火中烧	nhis
@@ -69848,7 +69736,6 @@ GPRS	gprs
 拿着	njim
 闹着	njim
 难解之谜	njim
-年级主任	njir
 您早	njir
 拿走	njiu
 您诸位	njiw
@@ -69979,7 +69866,6 @@ GPRS	gprs
 拿着	njzm
 闹着	njzm
 难解之谜	njzm
-年级主任	njzr
 您早	njzr
 拿走	njzu
 您诸位	njzw
@@ -70031,7 +69917,6 @@ GPRS	gprs
 捏在	nkia
 捏住	nkij
 捏着	nkim
-内科主任	nkir
 扭转	nkis
 捏造	nkit
 撵走	nkiu
@@ -70109,7 +69994,6 @@ GPRS	gprs
 捏在	nkza
 捏住	nkzj
 捏着	nkzm
-内科主任	nkzr
 扭转	nkzs
 捏造	nkzt
 撵走	nkzu
@@ -109191,12 +109075,10 @@ QQ密码	qqmm
 入学成绩	rxcj
 绕场	rxcu
 热线电话	rxdh
-热心读者	rxdi
 人心大快	rxdk
 绕道	rxdm
 人行道上	rxds
 绕到	rxds
-热心读者	rxdz
 人心浮动	rxfd
 如下方法	rxff
 热血沸腾	rxft
@@ -114604,7 +114486,6 @@ QQ密码	qqmm
 守着	snim
 守则	snio
 实质	sniq
-室主任	snir
 实质上	snis
 慎重	snit
 塞子	sniv
@@ -114842,7 +114723,6 @@ QQ密码	qqmm
 守着	snzm
 守则	snzo
 实质	snzq
-室主任	snzr
 实质上	snzs
 慎重	snzt
 塞子	snzv
@@ -116792,9 +116672,9 @@ QQ密码	qqmm
 升心点	stxd
 剩下	stxf
 私刑	stxg
+生效	stxh
 升序	stxh
 失效	stxh
-生效	stxh
 生肖	stxj
 私信	stxj
 升学率	stxl
@@ -131321,7 +131201,6 @@ Z	vyz
 握住	wkij
 挽着	wkim
 握着	wkim
-外科主任	wkir
 挖走	wkiu
 微皱	wkiw
 无可争议	wkiy
@@ -131479,7 +131358,6 @@ Z	vyz
 握住	wkzj
 挽着	wkzm
 握着	wkzm
-外科主任	wkzr
 挖走	wkzu
 微皱	wkzw
 无可争议	wkzy
@@ -134924,7 +134802,6 @@ Z	vyz
 薪资	xeih
 系指	xeik
 系着	xeim
-系主任	xeir
 荀子	xeiv
 莶	xej
 莶	xejn
@@ -135015,7 +134892,6 @@ Z	vyz
 薪资	xezh
 系指	xezk
 系着	xezm
-系主任	xezr
 荀子	xezv
 下	xf
 项	xf
@@ -139407,6 +139283,7 @@ Z	vyz
 香囊	xtnf
 先拿	xtnj
 香农	xtnl
+选	xtnn
 秀	xtnn
 箱内	xtno
 笑纳	xtnx
@@ -139959,7 +139836,6 @@ Z	vyz
 狭窄	xwin
 象征派	xwip
 夕照	xwir
-系主任	xwir
 鲜重	xwit
 象征性	xwix
 弦外之音	xwiy
@@ -140100,7 +139976,6 @@ Z	vyz
 狭窄	xwzn
 象征派	xwzp
 夕照	xwzr
-系主任	xwzr
 鲜重	xwzt
 象征性	xwzx
 弦外之音	xwzy
@@ -141246,24 +141121,23 @@ Z	vyz
 有前途	yaut
 硬气	yaut
 有趣	yauu
+有钱	yauy
 尤其要	yauy
 有求于	yauy
-有钱	yauy
 郁	yav
 郁	yavv
 厌恶	yawf
 有无	yawg
-原文	yawh
 愿望	yawh
+原文	yawh
 原味	yawi
 原位	yawj
-有位	yawj
 有误	yawl
 尤为	yawm
 有网	yawo
 原委	yawt
-尤物	yawt
 硬物	yawt
+尤物	yawt
 右卫	yawv
 压纹	yawx
 研修班	yaxb
@@ -141274,7 +141148,6 @@ Z	vyz
 原系	yaxe
 原型	yaxg
 原形	yaxg
-右旋	yaxh
 有效	yaxh
 有效值	yaxi
 研修	yaxj
@@ -149049,7 +148922,6 @@ Z	vyz
 贻笑大方	yxdf
 有线电话	yxdh
 约旦河	yxdh
-以飨读者	yxdi
 乙酰胆碱	yxdj
 余弦定理	yxdl
 驿道	yxdm
@@ -149058,7 +148930,6 @@ Z	vyz
 约旦	yxdr
 有线电视	yxds
 约等于	yxdy
-以飨读者	yxdz
 一笑而过	yxeg
 幺蛾子	yxei
 优秀儿女	yxen
@@ -157624,7 +157495,6 @@ Z	vyz
 组字	zxin
 纸制品	zxip
 纸质	zxiq
-执行主任	zxir
 纵轴	zxis
 终至	zxis
 组长	zxit
@@ -157836,7 +157706,6 @@ Z	vyz
 组字	zxzn
 纸制品	zxzp
 纸质	zxzq
-执行主任	zxzr
 纵轴	zxzs
 组长	zxzt
 骤增	zxzu
