20240602-232830：美洲、嘴等字词调序。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -4965,6 +4965,7 @@ bilibili	blbl
 悖谬	bnml
 办	bnmm
 边贸	bnmw
+边牧	bnmt
 宝马	bnmx
 包您满意	bnmy
 边	bnn
@@ -27815,8 +27816,8 @@ bilibili	blbl
 戆	ghl
 广灵	ghlb
 高楼	ghlc
-高利贷	ghld
 高粱	ghld
+高利贷	ghld
 高亮	ghlh
 高冷	ghlh
 高领	ghlj
@@ -40557,8 +40558,8 @@ GPRS	gprs
 主治医师	iiys
 孜孜以求	iiyu
 足月	iiyv
-呲	iiyw
 嘴	iiyw
+呲	iiyw
 睁只眼闭只眼	iiyy
 遮遮掩掩	iiyy
 只在	iiza
@@ -42192,8 +42193,8 @@ GPRS	gprs
 殖民统治	imti
 糟蹋	imti
 总体	imtj
-总台	imtl
 灶台	imtl
+总台	imtl
 灶糖	imtm
 兆头	imtn
 粘贴	imto
@@ -46721,9 +46722,9 @@ GPRS	gprs
 机顶	jcdf
 机动	jcdg
 禁毒	jcdg
-机顶盒	jcdh
-极度	jcdh
 极端	jcdh
+极度	jcdh
+机顶盒	jcdh
 基层党组织	jcdi
 极低	jcdj
 校对	jcdl
@@ -55181,8 +55182,8 @@ GPRS	gprs
 克服不了	kfbl
 酷毙了	kfbl
 可避免	kfbm
-可怖	kfbn
 恐怖	kfbn
+可怖	kfbn
 恐怖片	kfbp
 可不是	kfbs
 考妣	kfbs
@@ -55550,6 +55551,7 @@ GPRS	gprs
 开房	kgfl
 开发	kgfn
 开发区	kgfq
+开发商	kgfs
 开发区	kgfu
 开封	kgfu
 开赴	kgfu
@@ -60463,6 +60465,7 @@ GPRS	gprs
 立宪派	lhxp
 两害相权取其轻	lhxq
 六弦琴	lhxq
+冷血	lhxr
 零星	lhxr
 旅行社	lhxs
 冷笑	lhxt
@@ -66501,8 +66504,8 @@ GPRS	gprs
 米粥	mmib
 美展	mmib
 美洲豹	mmib
-明目张胆	mmid
 美洲	mmid
+明目张胆	mmid
 迷醉	mmif
 默默祝福	mmif
 美洲虎	mmih
@@ -66737,8 +66740,8 @@ GPRS	gprs
 米粥	mmzb
 美展	mmzb
 美洲豹	mmzb
-明目张胆	mmzd
 美洲	mmzd
+明目张胆	mmzd
 迷醉	mmzf
 默默祝福	mmzf
 美洲虎	mmzh
@@ -113329,9 +113332,9 @@ QQ密码	qqmm
 水落归槽	slgc
 神格	slgc
 叁	slgd
-社工	slgf
 神功	slgf
 诗歌	slgf
+社工	slgf
 双规	slgg
 圣公会	slgh
 双轨制	slgi
@@ -114173,9 +114176,8 @@ QQ密码	qqmm
 杀人犯	smrf
 首日封	smrf
 杀人罪	smri
-善人	smrj
 杀人	smrj
-首任	smrj
+善人	smrj
 受热	smrk
 受让	smrl
 杀入	smrm
@@ -116695,13 +116697,14 @@ QQ密码	qqmm
 私有	stya
 生涯	styd
 私营	stye
+生于	styg
 适于	styg
-失意	styh
-失言	styh
+适应	styh
 生意	styh
 生育	styh
+失意	styh
+失言	styh
 私有化	styh
-适应	styh
 失业者	styi
 私有制	styi
 适应症	styi
@@ -118062,8 +118065,8 @@ QQ密码	qqmm
 水饮内停	synt
 锶	syo
 锶	syol
-上屏	sypb
 锁屏	sypb
+上屏	sypb
 上品	sypi
 上抛	sypk
 上排	sypk
@@ -152503,8 +152506,8 @@ Z	vyz
 只因	ziyo
 踪影	ziyr
 足月	ziyv
-呲	ziyw
 嘴	ziyw
+呲	ziyw
 只在	ziza
 只知道	zizd
 咋整	zizf
@@ -154131,8 +154134,8 @@ Z	vyz
 灼痛	zmth
 糟蹋	zmti
 总体	zmtj
-总台	zmtl
 灶台	zmtl
+总台	zmtl
 灶糖	zmtm
 兆头	zmtn
 粘贴	zmto
