--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -4523,7 +4523,6 @@ bilibili	blbl
 半格	bmgc
 半个多	bmgd
 八哥	bmgf
-半官方	bmgf
 表面功夫	bmgf
 炮干	bmgg
 并	bmgi
@@ -25393,7 +25392,6 @@ bilibili	blbl
 附庸风雅	fyfy
 风言风语	fyfy
 发扬光大	fygd
-非官方	fygf
 放言高论	fygl
 非公	fygm
 防御功能	fygn
@@ -26073,9 +26071,8 @@ bilibili	blbl
 改回	gbho
 改好	gbhs
 根本好转	gbhz
-固步自封	gbif
 改正	gbif
-故步自封	gbif
+固步自封	gbif
 干部职工	gbig
 改装	gbih
 改作	gbij
@@ -26191,16 +26188,13 @@ bilibili	blbl
 改由	gbyo
 供不应求	gbyq
 改易	gbyr
-更不用说	gbys
-更不要说	gbys
 供不应求	gbyu
 弓腰	gbyv
 改用	gbyw
 根本原因	gbyy
 官兵一致	gbyz
-固步自封	gbzf
 改正	gbzf
-故步自封	gbzf
+固步自封	gbzf
 干部职工	gbzg
 改装	gbzh
 改作	gbzj
@@ -26464,8 +26458,8 @@ bilibili	blbl
 沽	gdfi
 浭	gdfk
 滚翻	gdfm
-滚滚	gdgd
 灌溉	gdgd
+滚滚	gdgd
 亘古	gdgf
 沟谷	gdgm
 敢打敢拼	gdgp
@@ -26737,9 +26731,9 @@ bilibili	blbl
 共存亡	gfcw
 工程学	gfcx
 工程系	gfcx
-工程院	gfcy
-故此	gfcy
 过错	gfcy
+故此	gfcy
+工程院	gfcy
 甘	gfd
 更大	gfda
 共渡	gfdd
@@ -26749,8 +26743,8 @@ bilibili	blbl
 歌德尔	gfde
 古都	gfdf
 更动	gfdg
-功底	gfdh
 过度	gfdh
+功底	gfdh
 古代	gfdj
 功德	gfdk
 攻打	gfdk
@@ -26784,18 +26778,18 @@ bilibili	blbl
 歌赋	gffo
 共赴	gffu
 攻防	gffv
-共犯	gffw
 辜负	gffw
+共犯	gffw
 酐	gfg
 更改	gfgb
 过杠	gfgc
-功过	gfgf
 哥哥	gfgf
+功过	gfgf
 更高	gfgh
 过关	gfgm
 故宫	gfgn
-古国	gfgo
 巩固	gfgo
+古国	gfgo
 鞲	gfgo
 贡嘎山	gfgs
 共管	gfgt
@@ -26831,10 +26825,10 @@ bilibili	blbl
 工作队	gfid
 故纸堆	gfid
 甘蔗	gfie
-工作服	gfif
 工整	gfif
 更正	gfif
 耿直	gfif
+工作服	gfif
 工字钢	gfig
 工资	gfih
 耇	gfii
@@ -26842,8 +26836,8 @@ bilibili	blbl
 工作	gfij
 工作间	gfij
 共振	gfik
-工作狂	gfik
 工资卡	gfik
+工作狂	gfik
 工作量	gfil
 恭祝	gfil
 更糟	gfim
@@ -26860,45 +26854,44 @@ bilibili	blbl
 故纸	gfix
 攻占	gfiy
 恭	gfj
-工具包	gfjb
 故居	gfjb
 歌剧	gfjb
+工具包	gfjb
 甘橘	gfjc
 过激	gfjd
 恭敬	gfje
 共聚	gfjf
 攻击	gfjg
-古迹	gfjh
 过奖	gfjh
+古迹	gfjh
 古旧	gfji
 攻坚战	gfji
 高附加值	gfji
-共价键	gfjj
 古今	gfjj
+共价键	gfjj
 攻击机	gfjj
 过家家	gfjj
 过街	gfjk
-共计	gfjl
 工具栏	gfjl
-工具类	gfjl
+共计	gfjl
 攻击力	gfjl
 更兼	gfjm
 更加	gfjn
 工具	gfjo
 更近	gfjq
-工具书	gfjs
 工匠	gfjs
+工具书	gfjs
 古籍	gfjt
 过几天	gfjt
 过境	gfju
 过急	gfjw
 功绩	gfjx
 工具箱	gfjx
-光风霁月	gfjy
-国防教育	gfjy
 歌剧院	gfjy
-攻坚战	gfjz
+国防教育	gfjy
+光风霁月	gfjy
 更加	gfjz
+攻坚战	gfjz
 高附加值	gfjz
 更	gfk
 工矿	gfka
@@ -26909,9 +26902,8 @@ bilibili	blbl
 国防科技	gfkj
 更	gfkk
 功课	gfkl
-更快	gfkn
 过客	gfkn
-过快	gfkn
+更快	gfkn
 工科	gfkt
 国防科工委	gfkw
 国防科技大学	gfkx
@@ -26923,13 +26915,13 @@ bilibili	blbl
 功劳	gfle
 甘蓝	gfle
 古老	gflf
-过来	gflh
 功率	gflh
+过来	gflh
 甘露	gflh
-过滤嘴	gfli
 过路	gfli
-古兰经	gflj
+过滤嘴	gfli
 哥俩	gflj
+古兰经	gflj
 高风亮节	gflj
 攻擂	gflk
 过礼	gfll
@@ -26938,8 +26930,8 @@ bilibili	blbl
 功力	gfln
 攻略	gflo
 过滤器	gflq
-过来人	gflr
 过路人	gflr
+过来人	gflr
 过量	gflr
 古龙水	gfls
 功利	gflt
@@ -27020,9 +27012,9 @@ bilibili	blbl
 工人党	gfrd
 共荣	gfre
 过日子	gfri
-古人	gfrj
 工人	gfrj
 故人	gfrj
+古人	gfrj
 过人	gfrj
 过热	gfrk
 古人类	gfrl
@@ -27035,18 +27027,15 @@ bilibili	blbl
 古生代	gfsd
 甘薯	gfse
 故事	gfsf
-更甚	gfsf
 过世	gfsf
 鬼斧神工	gfsg
-古时候	gfsh
 工商	gfsh
-工商户	gfsh
+古时候	gfsh
 工伤	gfsj
 工商局	gfsj
 工商界	gfsj
 歌手	gfsk
 攻势	gfsk
-过手	gfsk
 哥萨克	gfsk
 共识	gfsl
 古诗	gfsl
@@ -27054,10 +27043,9 @@ bilibili	blbl
 歌颂	gfsm
 攻守	gfsn
 古史	gfso
-故事片	gfsp
 更少	gfsp
+故事片	gfsp
 过时	gfsr
-过生日	gfsr
 甘肃省	gfss
 过剩	gfst
 歌声	gfsu
@@ -27069,7 +27057,6 @@ bilibili	blbl
 歌厅	gfta
 乾	gftc
 共同点	gftd
-更添	gftd
 过堂风	gftf
 更替	gftg
 恭听	gfti
@@ -27084,15 +27071,15 @@ bilibili	blbl
 古体诗	gfts
 古铜色	gfts
 哥特式	gfts
-共同体	gftt
 甘甜	gftt
+共同体	gftt
 歌坛	gftu
 共同性	gftx
 古铜	gfty
 更强	gfub
 过桥	gfuc
-工期	gfuf
 过期	gfuf
+工期	gfuf
 古琴	gfug
 共庆	gfuh
 各负其责	gfui
@@ -27115,25 +27102,21 @@ bilibili	blbl
 古文	gfwh
 革委会	gfwh
 古文字	gfwi
-官方网站	gfwi
-官方文件	gfwj
+过问	gfwj
 歌	gfwj
 歌舞剧	gfwj
-过问	gfwj
-巩	gfwk
 过往	gfwk
+巩	gfwk
 更为	gfwm
 甘为	gfwm
-过完	gfwn
 更晚	gfwr
 过万	gfws
-共舞	gfwt
 歌舞	gfwt
+共舞	gfwt
 歌舞厅	gfwt
 歌舞团	gfwt
 恭维	gfwx
 古文字	gfwz
-官方网站	gfwz
 工信部	gfxb
 共享版	gfxb
 更想	gfxc
@@ -27164,16 +27147,16 @@ bilibili	blbl
 工薪族	gfxz
 甘愿	gfya
 过硬	gfya
-古印度	gfyd
 甘油	gfyd
+古印度	gfyd
 工艺	gfye
 更要	gfyf
 过于	gfyg
 故意	gfyh
-歌友会	gfyh
 过瘾	gfyh
-官复原职	gfyi
+歌友会	gfyh
 歌咏	gfyi
+官复原职	gfyi
 过亿	gfyj
 歌谣	gfyl
 巩义	gfym
@@ -27184,10 +27167,9 @@ bilibili	blbl
 更衣室	gfys
 工业	gfyu
 贡院	gfyv
-功用	gfyw
 恭迎	gfyw
+功用	gfyw
 共约	gfyx
-官方语言	gfyy
 官复原职	gfyz
 功	gfz
 故在	gfza
@@ -27196,17 +27178,17 @@ bilibili	blbl
 工作队	gfzd
 故纸堆	gfzd
 甘蔗	gfze
-工作服	gfzf
 工整	gfzf
 更正	gfzf
 耿直	gfzf
+工作服	gfzf
 工字钢	gfzg
 工资	gfzh
 工作	gfzj
 工作间	gfzj
 共振	gfzk
-工作狂	gfzk
 工资卡	gfzk
+工作狂	gfzk
 工作量	gfzl
 恭祝	gfzl
 更糟	gfzm
@@ -27478,9 +27460,9 @@ bilibili	blbl
 广播操	ghbc
 高不成	ghbc
 广博	ghbf
-关怀备至	ghbi
 广播站	ghbi
 高保真	ghbi
+关怀备至	ghbi
 广播剧	ghbj
 高倍	ghbj
 广播	ghbk
@@ -27490,37 +27472,36 @@ bilibili	blbl
 广播台	ghbt
 广播网	ghbw
 广播员	ghby
-关怀备至	ghbz
 广播站	ghbz
 高保真	ghbz
+关怀备至	ghbz
 庚辰	ghca
 高层	ghcb
 高潮	ghcd
 高才	ghcf
 高产	ghch
 高唱	ghci
-光辉灿烂	ghcl
 高参	ghcl
+光辉灿烂	ghcl
 过河拆桥	ghcq
 高昌	ghcr
-高才生	ghcs
 高材生	ghcs
+高才生	ghcs
 高产田	ghct
 高程	ghct
 广场	ghcu
-过河拆桥	ghcu
 高超	ghcu
+过河拆桥	ghcu
 高出	ghcv
 广场舞	ghcw
 高处	ghcw
 广大	ghda
-疙瘩白	ghdb
 高蛋白	ghdb
 高档	ghdc
-广东话	ghdh
-疙瘩	ghdh
 高度	ghdh
 高端	ghdh
+广东话	ghdh
+疙瘩	ghdh
 高低	ghdj
 高等级	ghdj
 广德	ghdk
@@ -27550,7 +27531,6 @@ bilibili	blbl
 高仿	ghfj
 庋	ghfl
 高分	ghfm
-高发	ghfn
 高飞	ghfn
 高峰	ghfo
 高峰期	ghfq
@@ -27575,9 +27555,9 @@ bilibili	blbl
 高贵	ghgo
 广告牌	ghgp
 广告商	ghgs
-各怀鬼胎	ghgt
 广告	ghgt
 高管	ghgt
+各怀鬼胎	ghgt
 高跟鞋	ghgx
 各行各业	ghgy
 高钙	ghgy
@@ -27606,20 +27586,18 @@ bilibili	blbl
 广州人	ghir
 高照	ghir
 高中生	ghis
-郭祉彤	ghit
 高姿态	ghit
 高脂	ghiv
 工会主席	ghix
 光合作用	ghiy
-高居	ghjb
 高脚杯	ghjb
+高居	ghjb
 国恨家仇	ghjc
 高检	ghjc
 赣江	ghjd
 高洁	ghjd
 高精度	ghjd
 高教	ghjf
-郭静	ghjg
 广交会	ghjh
 高就	ghjh
 高叫	ghji
@@ -27697,8 +27675,8 @@ bilibili	blbl
 高攀	ghpc
 高频词	ghpc
 刚好碰到	ghpd
-高票	ghpf
 高配	ghpf
+高票	ghpf
 高平	ghph
 高品质	ghpi
 高抛	ghpk
@@ -27726,18 +27704,17 @@ bilibili	blbl
 蛊惑人心	ghrx
 高盛	ghsa
 高射炮	ghsb
-高深	ghsd
 高速度	ghsd
+高深	ghsd
 高速	ghsf
 高三	ghsg
 高瘦	ghsh
-高山族	ghsi
 高素质	ghsi
+高山族	ghsi
 高尚	ghsj
 高耸	ghsj
 高手	ghsk
 高速路	ghsl
-广受	ghsm
 高数	ghsm
 高烧	ghsm
 高山	ghso
@@ -27749,18 +27726,18 @@ bilibili	blbl
 高声	ghsu
 广收	ghsv
 过户手续	ghsx
-高山族	ghsz
 高素质	ghsz
+高山族	ghsz
 疙	ght
 高碳	ghta
 疙	ghtc
-规划土地	ghtd
 高汤	ghtd
+规划土地	ghtd
 高天	ghtg
 高碳钢	ghtg
 高堂	ghtj
-高徒	ghtk
 高挑	ghtk
+高徒	ghtk
 高通	ghtl
 高糖	ghtm
 庚帖	ghto
@@ -27768,8 +27745,8 @@ bilibili	blbl
 高塔	ghtu
 高铁	ghty
 高强	ghub
-高强度	ghud
 高清	ghud
+高强度	ghud
 高球	ghug
 高跷	ghui
 高企	ghuj
@@ -27853,11 +27830,10 @@ bilibili	blbl
 广州人	ghzr
 高照	ghzr
 高中生	ghzs
-郭祉彤	ghzt
 高姿态	ghzt
 高脂	ghzv
-工会主席	ghzx
 光合作用	ghzy
+工会主席	ghzx
 过河卒子	ghzz
 跟	gi
 咕	gi
@@ -27889,9 +27865,9 @@ bilibili	blbl
 冠状动脉粥样硬化性心脏病	gidb
 功在当代	gidd
 冠状动脉粥样硬化	gidh
-咕咚	gidi
-咕嘟	gidi
 咯噔	gidi
+咕嘟	gidi
+咕咚	gidi
 咣当	gidj
 管制刀具	gidj
 跟打	gidk
@@ -27915,8 +27891,8 @@ bilibili	blbl
 公子哥儿	gige
 呱呱	gigi
 咕咕	gigi
-咣咣	gigi
 嘎嘎	gigi
+咣咣	gigi
 呱呱叫	gigj
 鼓足干劲	gigj
 工资管理	gigl
@@ -27929,10 +27905,11 @@ bilibili	blbl
 跟在	giia
 跪在	giia
 跟庄	giih
-嘎吱	giii
 跟踪	giii
-股掌之间	giij
+咯吱	giii
+嘎吱	giii
 跪坐	giij
+股掌之间	giij
 跟着	giim
 骨质增生	giis
 故作姿态	giit
@@ -27949,8 +27926,8 @@ bilibili	blbl
 管中窥豹	gikb
 嘎拉哈	gilh
 跟来	gilh
-咕噜	gili
 咖喱	gili
+咕噜	gili
 公正廉洁	gilj
 公正廉明	gilm
 国之利器	gilq
@@ -27997,9 +27974,9 @@ bilibili	blbl
 剐	giuu
 跪	giw
 跪	giwa
-各自为战	giwi
 各自为政	giwi
 咯	giwi
+各自为战	giwi
 喼	giwl
 贵重物品	giwp
 公子王孙	giws
@@ -28019,10 +27996,11 @@ bilibili	blbl
 咖	giz
 跟在	giza
 跟庄	gizh
+跟踪	gizi
 咯吱	gizi
 嘎吱	gizi
-跟踪	gizi
 跪坐	gizj
+股掌之间	gizj
 跟着	gizm
 光	gj
 供	gj
@@ -28101,10 +28079,10 @@ bilibili	blbl
 光滑	gjhd
 光环	gjhg
 国际货币基金组织	gjhi
-供货	gjhj
-光华	gjhj
-光合	gjhj
 光辉	gjhj
+供货	gjhj
+光合	gjhj
+光华	gjhj
 光火	gjhm
 供货商	gjhs
 钢筋混凝土	gjht
@@ -28121,7 +28099,6 @@ bilibili	blbl
 孤军作战	gjii
 估值	gjij
 过江之鲫	gjij
-光着	gjim
 国际知名	gjim
 个字	gjin
 闺中	gjio
@@ -28129,8 +28106,8 @@ bilibili	blbl
 光照	gjir
 刽子手	gjis
 感激之情	gjiu
-光子	gjiv
 鸽子	gjiv
+光子	gjiv
 古今中外	gjiw
 供桌	gjiy
 国际机场	gjjc
@@ -28269,8 +28246,8 @@ bilibili	blbl
 闺秀	gjxt
 国际象棋	gjxu
 光鲜	gjxw
-光纤	gjxx
 光线	gjxx
+光纤	gjxx
 供销	gjxy
 光有	gjya
 国际音标	gjyb
@@ -28305,7 +28282,6 @@ bilibili	blbl
 伽	gjzi
 估值	gjzj
 过江之鲫	gjzj
-光着	gjzm
 国际知名	gjzm
 个字	gjzn
 闺中	gjzo
@@ -28313,8 +28289,8 @@ bilibili	blbl
 光照	gjzr
 刽子手	gjzs
 感激之情	gjzu
-光子	gjzv
 鸽子	gjzv
+光子	gjzv
 古今中外	gjzw
 供桌	gjzy
 国际组织	gjzz
@@ -28348,7 +28324,6 @@ bilibili	blbl
 挂电话	gkdh
 高开低走	gkdi
 挂挡	gkdk
-挂掉	gkdk
 搞掂	gkdk
 挂断	gkdm
 搞定	gkdn
@@ -28376,9 +28351,8 @@ bilibili	blbl
 挂勾	gkgw
 挂钩	gkgy
 搞	gkh
-挂画	gkhd
-搞活	gkhd
 搞混	gkhd
+搞活	gkhd
 挂花	gkhe
 挂号费	gkhf
 挂号	gkhi
@@ -28492,8 +28466,8 @@ bilibili	blbl
 搁浅	gkud
 挂旗	gkuh
 顾客群体	gkut
-挂起	gkuu
 搞起	gkuu
+挂起	gkuu
 搞钱	gkuy
 拐弯	gkwh
 感慨万千	gkwq
@@ -28534,8 +28508,8 @@ bilibili	blbl
 该案	glan
 管理办法	glbf
 该不该	glbg
-诟病	glbh
 诡辩	glbh
+诟病	glbh
 该报	glbk
 给脸不要脸	glbl
 该办	glbn
@@ -28853,9 +28827,9 @@ bilibili	blbl
 谷歌	gmgf
 公干	gmgg
 公告栏	gmgl
-公公	gmgm
-公关	gmgm
 关公	gmgm
+公关	gmgm
+公公	gmgm
 公国	gmgo
 公告	gmgt
 公馆	gmgw
@@ -29173,7 +29147,6 @@ bilibili	blbl
 割喉	gnhi
 狗拿耗子	gnhi
 官话	gnhl
-寡欢	gnhl
 怪话	gnhl
 官宦	gnhn
 惯坏	gnhu
@@ -29184,33 +29157,32 @@ bilibili	blbl
 宫	gnii
 归纳总结	gnij
 怪招	gnik
-宫中	gnio
-寡助	gnio
 怪罪	gnio
+寡助	gnio
+宫中	gnio
 官至	gnis
 官长	gnit
 宫颈癌	gnja
-官居	gnjb
 寡居	gnjb
+官居	gnjb
 怪杰	gnjc
 官架子	gnji
 怪叫	gnji
 割据	gnjk
-割接	gnjk
 宫颈	gnjl
 官爵	gnjm
 官家	gnjn
-割胶	gnjv
 官阶	gnjv
+割胶	gnjv
 官架子	gnjz
 割开	gnkg
 怪	gnl
 割裂	gnla
 官吏	gnlf
-官僚	gnlj
 惯例	gnlj
-割礼	gnll
+官僚	gnlj
 怪论	gnll
+割礼	gnll
 工农联盟	gnlm
 宫里	gnlo
 惯量	gnlr
@@ -29285,8 +29257,8 @@ bilibili	blbl
 惯窃	gnun
 怪圈	gnuo
 官气	gnut
-割去	gnuu
 宫墙	gnuu
+割去	gnuu
 官腔	gnuv
 更年期综合征	gnuz
 宄	gnw
@@ -29347,12 +29319,9 @@ bilibili	blbl
 固本	gobf
 国宾馆	gobg
 国别	gobi
-刚把	gobk
-果报	gobk
 贵宾卡	gobk
+果报	gobk
 刚被	gobl
-国标码	gobm
-购并	gobm
 国宝	gobn
 贵宾	gobn
 贵宾卡	gobu
@@ -29414,10 +29383,10 @@ bilibili	blbl
 果戈里	gogl
 国公	gogm
 刚刚	gogo
-刚果	gogo
-蝈蝈	gogo
-贵国	gogo
 骨骼	gogo
+贵国	gogo
+蝈蝈	gogo
+刚果	gogo
 骨鲠	gogw
 赅	goh
 骨灰	goha
@@ -29427,8 +29396,8 @@ bilibili	blbl
 骨灰盒	gohh
 国号	gohi
 崞	gohi
-国会	gohj
 国货	gohj
+国会	gohj
 骨灰级	gohj
 国徽	gohk
 固话	gohl
@@ -29439,7 +29408,6 @@ bilibili	blbl
 贵在	goia
 果汁	goid
 国葬	goie
-刚正	goif
 果真	goif
 贵族	goih
 贵站	goih
@@ -29470,8 +29438,8 @@ bilibili	blbl
 国际化	gojh
 果酱	gojh
 蛤	goji
-刚健	gojj
 固件	gojj
+刚健	gojj
 刚劲	gojl
 固精	gojm
 国家	gojn
@@ -29594,9 +29562,9 @@ bilibili	blbl
 虼	gotc
 国泰	gotg
 岗亭	goth
-刚体	gotj
 固体	gotj
 国土局	gotj
+刚体	gotj
 果糖	gotm
 骨头	gotn
 国统区	gotq
@@ -29662,10 +29630,9 @@ bilibili	blbl
 刚一	goyd
 国营	goye
 刚要	goyf
-刚玉	goyg
-国与国	goyg
-国有股	goyg
 国运	goyg
+国有股	goyg
+刚玉	goyg
 刚毅	goyh
 国有制	goyi
 国优	goyj
@@ -29734,8 +29701,8 @@ bilibili	blbl
 归回	gpho
 归航	gphq
 归葬	gpie
-归正	gpif
 归真	gpif
+归正	gpif
 归总	gpim
 归罪	gpio
 归舟	gpiq
@@ -30253,10 +30220,10 @@ GPRS	gprs
 管账	gtio
 告知	gtit
 稿子	gtiv
-管子	gtiv
 罐子	gtiv
-告终	gtix
+管子	gtiv
 稿纸	gtix
+告终	gtix
 搿	gtj
 共同进步	gtjb
 告警	gtje
@@ -30357,8 +30324,8 @@ GPRS	gprs
 共同签署	gtus
 管区	gtus
 告缺	gtut
-刮起	gtuu
 告罄	gtuu
+刮起	gtuu
 筀	gtuu
 管腔	gtuv
 管卡	gtuy
@@ -30384,9 +30351,8 @@ GPRS	gprs
 乖	gty
 刮油	gtyd
 稿源	gtyd
-乖	gtyw
-管乐	gtyw
 管用	gtyw
+乖	gtyw
 稿约	gtyx
 共同语言	gtyy
 乖张	gtzb
@@ -30531,8 +30497,8 @@ GPRS	gprs
 赶巧	guuf
 归侨侨眷	guuj
 鼓曲	guuo
-赶去	guuu
 鼓起	guuu
+赶去	guuu
 邽	guvv
 彀	guw
 攻其无备	guwb
@@ -30582,8 +30548,8 @@ GPRS	gprs
 肱	gval
 隔岸	gvao
 胱氨酸	gvas
-胳臂	gvbb
 隔壁	gvbb
+胳臂	gvbb
 隔板	gvbc
 孤本	gvbf
 股本	gvbf
