20240603-060509：国内版国际版

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -12808,15 +12808,14 @@ bilibili	blbl
 承担	cvdk
 承德	cvdk
 出对	cvdl
-出兑	cvdm
 出道	cvdm
+出兑	cvdm
 出典	cvdo
 陈独秀	cvdx
 丑恶	cvef
 承恩	cveo
-出发地	cvfd
-出发点	cvfd
 除法	cvfd
+出发点	cvfd
 陈腐	cvfh
 出伏	cvfj
 出风口	cvfk
@@ -29420,8 +29419,8 @@ bilibili	blbl
 骨子里	goil
 贵州	goim
 国字	goin
-曱甴	goio
 购置	goio
+曱甴	goio
 骨质	goiq
 贵州省	gois
 贵重	goit
@@ -29429,6 +29428,7 @@ bilibili	blbl
 骨子	goiv
 国资委	goiw
 蛤	goj
+国际版	gojb
 国君	gojb
 国家队	gojd
 骨节	goje
@@ -29494,6 +29494,7 @@ bilibili	blbl
 购买者	gomz
 国难财	gonc
 国难	gonl
+国内版	gonb
 国内	gono
 国内外	gonw
 贵	goo
@@ -29659,8 +29660,8 @@ bilibili	blbl
 骨子里	gozl
 贵州	gozm
 国字	gozn
-曱甴	gozo
 购置	gozo
+曱甴	gozo
 骨质	gozq
 贵州省	gozs
 贵重	gozt
@@ -52042,7 +52043,7 @@ GPRS	gprs
 季报表	jtbb
 简本	jtbf
 简表	jtbg
-积冰	jtbh
+简笔画	jtbh
 久拖不决	jtbj
 简便	jtbj
 简报	jtbk
@@ -98135,16 +98136,15 @@ GPRS	gprs
 澎湖湾	pdhw
 泡在	pdia
 泡澡	pdid
+派至	pdis
 普度众生	pdis
 普渡众生	pdis
-派至	pdis
 婆子	pdiv
 派驻	pdix
 平等自愿	pdiy
 濮	pdj
 泡椒	pdjc
 浦江	pdjd
-派军	pdjl
 潘金莲	pdjl
 婆家	pdjn
 庖丁解牛	pdjn
@@ -98153,12 +98153,11 @@ GPRS	gprs
 派克	pdkf
 泡开	pdkg
 漂流	pdld
-泼辣	pdlh
 漂亮	pdlh
+泼辣	pdlh
 潘多拉的盒子	pdli
 婆罗门	pdlm
 跑得了和尚跑不了庙	pdlm
-判断力批判	pdlp
 泼冷水	pdls
 潽了	pdlv
 潘多拉的盒子	pdlz
@@ -98166,12 +98165,10 @@ GPRS	gprs
 泡面	pdma
 泡沫	pdmd
 湴	pdmf
-碰到麻烦	pdmf
 洴	pdmg
 泮	pdmi
 泼墨	pdmo
 湓	pdmo
-排队买票	pdmp
 潽	pdmr
 婆妈	pdms
 潎	pdmt
@@ -104501,10 +104498,10 @@ GPRS	gprs
 曲牌	qopr
 曲奇	qoqa
 蛐蛐儿	qoqe
-崎岖	qoqo
 瞧瞧	qoqo
-蛐蛐	qoqo
 蜷曲	qoqo
+崎岖	qoqo
+蛐蛐	qoqo
 瞧去	qoqu
 圈钱	qoqy
 蚯	qor
@@ -126539,9 +126536,10 @@ QQ密码	qqmm
 畦	uou
 曲奇	uoua
 蛐蛐儿	uoue
+瞧瞧	uouo
+蜷曲	uouo
 崎岖	uouo
 蛐蛐	uouo
-蜷曲	uouo
 畦	uouu
 瞧去	uouu
 圈钱	uouy
@@ -132150,13 +132148,13 @@ Z	vyz
 我部	wtbh
 舞伴	wtbj
 我把	wtbk
-我爸	wtbm
 舞弊	wtbm
+我爸	wtbm
 委办	wtbn
 委比	wtbs
-我辈	wtby
-稳步	wtby
 舞步	wtby
+稳步	wtby
+我辈	wtby
 委办	wtbz
 我厂	wtca
 万头攒动	wtcd
@@ -132166,16 +132164,16 @@ Z	vyz
 我曾	wtcm
 午餐肉	wtcr
 舞场	wtcu
-我处	wtcw
 我猜	wtcw
 我馋	wtcw
+我处	wtcw
 午餐	wtcy
 舞动	wtdg
 舞蹈	wtdi
-我党	wtdj
-稳定剂	wtdj
 稳当	wtdj
 舞蹈家	wtdj
+稳定剂	wtdj
+我党	wtdj
 稳打	wtdk
 稳定	wtdn
 我的	wtdr
@@ -144640,16 +144638,16 @@ Z	vyz
 祐	ylai
 羿	ylai
 预	ylaj
+预案	ylan
 冤案	ylan
 议案	ylan
-预案	ylan
 异亮氨酸	ylas
 永不	ylba
 永不变	ylbb
 眼泪巴叉	ylbc
+诱逼	ylbd
 一了百当	ylbd
 屹立不倒	ylbd
-诱逼	ylbd
 预备队	ylbd
 永葆	ylbe
 译本	ylbf
@@ -144660,8 +144658,8 @@ Z	vyz
 永别	ylbi
 以便	ylbj
 预卜	ylbj
-诱捕	ylbk
 预报	ylbk
+诱捕	ylbk
 一了百了	ylbl
 又不能	ylbn
 预备期	ylbq
@@ -144670,28 +144668,26 @@ Z	vyz
 以巴	ylbv
 预备	ylbw
 养老保险	ylbx
-以北	ylby
 预备役	ylby
+以北	ylby
 一鳞半爪	ylbz
-永存	ylca
 预存	ylca
+永存	ylca
 疑虑重重	ylcc
 预测	ylcd
 永春	ylcg
 预产	ylch
 预测值	ylci
-冤仇	ylcj
 谣传	ylcj
-语词	ylcl
+冤仇	ylcj
 预处理	ylcl
 预产期	ylcq
 翌晨	ylcr
 娱乐场所	ylcs
 阴冷潮湿	ylcs
-一路畅通	ylct
 优良传统	ylct
-又称	ylct
 议程	ylct
+又称	ylct
 预产期	ylcu
 译出	ylcv
 以此为	ylcw
